# dotguard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  dotguard.yml  publish.yml
src/dotguard/: cli.py  validator.py
