[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotguard"
version = "0.1.0"
description = "Validate your .env file against .env.example before you deploy."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["dotenv", "env", "cli", "deployment", "validation", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/pychris1/dotguard"
Repository = "https://github.com/pychris1/dotguard"
"Bug Tracker" = "https://github.com/pychris1/dotguard/issues"
Changelog = "https://github.com/pychris1/dotguard/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
dotguard = "dotguard.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
